--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -39,5 +39,11 @@ When I type `qnp` and hit the tab key, I see this in my console:
 
 with the cursor having jumped to `headline` as a variable. After filling in the headline spot, you can tab to description and then tab again to categories.
 
+## Categories
+
+While it's easy to check available blog categories by going to your blog's home page, you can stay in your R console and run the `see_cats()` function. It will check the blog home page for you and print out the vector of available categories. 
+
+`see_cats()` takes one argument, the full blog URL including `https://` . You can set an R environment variable `BLOG_URL` to your full blog URL so you don't have to enter it manually into the function.
+
 
 
