--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -22,7 +22,7 @@ library(newpost)
 
 WARNING: This package will create folders and files on your system!
 
-The `newpost()` function has one required argument: the headline for your post. If you run `newpost("Welcome to my blog!")` on March 8, 2023, it will create a folder `2023-03-08-welcome-to-my-blog` in your blog's posts directory, and also create an index.qmd file in that new directory with "Welcome to my blog!" as the YAML title. There are optional arguments for description, author, and categories. Categories should be a single comma-separated string and _not_ a character _vector_, such as "General, Community".
+The `newpost()` function has one required argument: the headline for your post. If you run `newpost("Welcome to my blog!")` on March 8, 2025, it will create a folder `2025-03-08-welcome-to-my-blog` in your blog's posts directory, and also create an index.qmd file in that new directory with "Welcome to my blog!" as the YAML title. There are optional arguments for description, author, and categories. Categories should be a single comma-separated string and _not_ a character _vector_, such as "General, Community".
 
 I suggest using a code snippet for this function, which gives you fill-in-the-blank code. I use this snippet, which I addded to my snippets with the `usethis::edit_rstudio_snippets()` function:
 
@@ -38,6 +38,8 @@ When I type `qnp` and hit the tab key, I see this in my console:
 `newpost::newpost("headline", "description", "categories", author = "Sharon Machlis")`
 
 with the cursor having jumped to `headline` as a variable. After filling in the headline spot, you can tab to description and then tab again to categories.
+
+If you want the date to be something besides the current date -- perhaps you are creating a post you plan on publishing sometime in the future -- you can also set the_date to be something like `Sys.Date() + 1` for tomorrow.
 
 ## Categories
 
